style.css
/* ... */
*,
*:before,
*:after {
  box-sizing: inherit;
}

* {
  margin: 0;
  padding: 0;
}

html {
  box-sizing: border-box;
  scroll-behavior: smooth;
}

body {
  margin: 0;
  padding: 0;
  font-family: Inter, Helvetica, "Segoe UI", Arial, sans-serif;
  font-weight: 400;
  text-align: left;
  vertical-align: baseline;
  line-height: 1.5;
  background-color: var(--color-background);
  -webkit-overflow-scrolling: touch;
  overflow-x: hidden;
  overflow-y: auto;
  position: relative;
  min-width: 385px;
}

.hidden {
  visibility: hidden;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: 500;
  text-align: left;
  line-height: 1.5;
  margin: 0 0 15px;
  padding: 0;
  color: var(--color);
  vertical-align: baseline;
}

h1 {
   font-size: clamp(2rem, 4vw, 3rem);
}

h2 {
  font-size: clamp(1.5rem, 2vw + 1rem, 2.25rem);
}

h3 {
  font-size: clamp(1.25rem, 2vw + 1rem, 2.25rem);
}

h4 {
  font-size: clamp(1.1rem, 2vw + 0.75rem, 1.75rem);
}

h5 {
  font-size: clamp(1rem, 2vw + 0.5rem, 1.5rem);
}
/* ... */

